# bevy-shooting-range

./: .gitignore  Cargo.toml  README.md  plans.drawio  plans.txt
.cargo/: config.toml
assets/: target.png~
assets/models/: AK15.glb  MSR.glb  ammo-box.glb  assault-rifle.glb  bullet.glb  casing.glb  circle_target.glb  grenade.glb  minecraft-world.glb  p226.glb  p226_anim.glb  p226_anim_save.glb  reddot-sight.glb  reflex-sight.glb  scope.glb  shooting-range.glb  shooting-range1.glb  silhouette-target.glb  silhouette_target.glb  sniper-rifle.glb
assets/models/targets/: enemy-target-hostage.glb
assets/models/weapons/: AK15.glb  FNFAL.glb  MSR.glb  P226.glb
src/: fps_counter.rs  main.rs
src/ingame/: bullet.rs  crosshair.rs  fps_counter.rs  gun.rs  ingame_setup.rs  mod.rs  player.rs  settings.rs  targets.rs  ui.rs  weapon_control.rs  weapons.rs
src/ingame/ingame_ui/: crosshair.rs  mod.rs  settings.rs  ui.rs
src/ingame/player_controller/: body_control.rs  head_control.rs  mod.rs  player.rs  player_look.rs  player_movement.rs
src/ingame/target_controller/: mod.rs  targets.rs
src/ingame/weapon_controller/: action_control.rs  aim_control.rs  bullet.rs  mod.rs  weapon_animations.rs  weapon_control.rs  weapons.rs
