[package]
name = "bevy-shooting-range"
version = "0.5.0"
edition = "2021"
authors = ["HasChad"]

[dependencies]
bevy = { version = "0.17.2", features = [
    "asset_processor",
    "serialize",
    "dynamic_linking",
] }
bevy-inspector-egui = "0.34.0"
avian3d = { git = "https://github.com/Jondolf/avian", branch = "main" }
rand = "0.9.2"
# https://crates.io/crates/bevy_pkv for saving game settings

[profile.dev]
opt-level = 1
[profile.dev.package."*"]
opt-level = 3
